[project]
name = "nlpscholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.33.0",
    "bitsandbytes==0.42.0",
    "datasets==2.20.0",
    "evaluate==0.4.3",
    "ipykernel==6.29.5",
    "jupyterlab==4.2.4",
    "pandas==2.2.2",
    "protobuf>=6.32.1",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "seaborn==0.13.2",
    "sentencepiece==0.2.0",
    "tokenizers==0.19.1",
    "torch>=2.4.0",
    "transformers==4.44.0",
    "typing-extensions==4.12.2",
]
